[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_json_log_formatter"
authors = [
  { name="Niels Korschinsky", email="niels.korschinsky@ibm.com" },
]
description = "Supplements a default formatter configuration for machine-readable JSON logging and applies it"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/IBM/python-json-log-formatter"
"Bug Tracker" = "https://github.com/IBM/python-json-log-formatter/issues"

[tool.setuptools.dynamic]
version = {attr = "python_json_log_formatter.VERSION"}

[tool.setuptools]
packages = ["python_json_log_formatter", "python_json_log_formatter/py.typed"]
